--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "@react-navigation/stack": "^6.3.18",
     "@reduxjs/toolkit": "^1.9.7",
     "@stripe/stripe-react-native": "0.28.0",
-    "expo": "~49.0.13",
+    "expo-firebase": "^0.0.0-alpha.0",
     "expo-status-bar": "~1.6.0",
     "firebase": "^10.5.0",
     "formik": "^2.4.5",
@@ -34,7 +34,8 @@
     "yup": "^1.3.2"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.20.0",
+    "expo": "^49.0.13"
   },
   "private": true
 }
