--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "dependencies": {
     "@expo/webpack-config": "^19.0.0",
-    "@react-native-async-storage/async-storage": "^1.19.3",
+    "@react-native-async-storage/async-storage": "1.18.2",
     "@react-native-firebase/app": "^18.5.0",
     "@react-native-firebase/auth": "^18.5.0",
     "@react-navigation/bottom-tabs": "^6.5.9",
@@ -24,7 +24,7 @@
     "formik": "^2.4.5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-native": "0.72.5",
+    "react-native": "0.72.6",
     "react-native-bouncy-checkbox": "^3.0.7",
     "react-native-elements": "^3.4.3",
     "react-native-google-places-autocomplete": "^2.5.6",
