--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-native-elements": "^3.4.3",
     "react-native-google-places-autocomplete": "^2.5.6",
     "react-native-maps": "1.7.1",
+    "react-native-svg": "^13.14.0",
     "react-native-web": "~0.19.6",
     "react-redux": "^8.1.3",
     "redux": "^4.2.1",
