--- a/package.json
+++ b/package.json
@@ -24,11 +24,13 @@
     "formik": "^2.4.5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-modal": "^3.16.1",
     "react-native": "0.72.5",
     "react-native-bouncy-checkbox": "^3.0.7",
     "react-native-elements": "^3.4.3",
     "react-native-google-places-autocomplete": "^2.5.6",
     "react-native-maps": "1.7.1",
+    "react-native-modal": "^13.0.1",
     "react-native-svg": "^13.14.0",
     "react-native-web": "~0.19.6",
     "react-redux": "^8.1.3",
