--- a/package.json
+++ b/package.json
@@ -33,7 +33,6 @@
     "react-native-google-places-autocomplete": "^2.5.6",
     "react-native-maps": "1.7.1",
     "react-native-modal": "^13.0.1",
-    "react-native-svg": "13.9.0",
     "react-native-web": "~0.19.6",
     "react-redux": "^8.1.3",
     "redux": "^4.2.1",
@@ -43,7 +42,9 @@
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
-    "expo": "^49.0.21"
+    "eslint": "^8.56.0",
+    "expo": "^49.0.21",
+    "force": "^0.0.3"
   },
   "private": true
 }
